site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
//sidemenu
$sidemenu-background-color: $dark-color;
$sidemenu-border: none;
$sidemenu-outer-padding: 0;
$sidemenu-min-width: 300px;
$sidemenu-max-width: 340px;

//Toggle (minimizer)
$sidemenu-toggle-background: $primary-color;
$sidemenu-toggle-color: #fff;

//sidemenu title
$sidemenu-title-weight: 500;

//sidemenu item - applies to li
$sidemenu-item-background: initial;
$sidemenu-item-hover-background: initial;
$sidemenu-item-padding: 1rem;

@mixin sidemenu-item-active-marker () {
  border-left: 4px solid $primary-color;
}

//sidemenu search
$sidemenu-search-background: #fff;
$sidemenu-search-color: #212121;
$sidemenu-search-placeholder: #ccc;
$sidemenu-search-color: #fff;
$sidemenu-search-border: none;
$sidemenu-search-radius: 2px;

//sidemenu link - applies to li > a
$sidemenu-link-padding: 1rem;
$sidemenu-link-color: #ABABAB;
$sidemenu-link-hover: #ABABAB;
$sidemenu-link-hover-background: rgba(0, 0, 0, 0.15);
$sidemenu-link-active-background: #212121;

$sidemenu-sublink-padding: .4rem 0 .4rem .6rem;
$sidemenu-sublink-radius: 2px;

//sidemenu popout
$sidemenu-popuot-background: #1e1e1e;

.sidemenu .sidemenu-toggle {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 36px;
  border-radius: 0 2px 2px 0;
  background: $sidemenu-toggle-background;
  >i {
    font-size: 1.6rem;
    &:before {
      color: $sidemenu-toggle-color;
      display: block;
      margin-left: 0;
      vertical-align: middle;
    }
  }
  @include breakpoint(small only) {
    &.show-for-small-only {display: flex !important;}

  }
  @include breakpoint(medium up) {
    &.hide-for-small-only {display: flex !important;}
  }
}

.sidemenu-logo {
  text-align: center;
  padding: 2.1rem 1rem 2rem 0; //todo: $logo-padding
  > .logo-max {
    width: 194px; //todo: $logo-max-size
    height: auto;
    transition: 0.2s 0.08s;
    opacity: 1;
  }
  > .logo-min {
    width: 0; //todo: $logo-min-size
    height: auto;
    transition: none;
    display: inline-block;
  }
}

.sidemenu {
  min-width: $sidemenu-min-width;
  max-width: $sidemenu-max-width;
  background: $sidemenu-background-color;
  flex-direction: column;
  overflow: visible;
  z-index: 999 !important;
  input { box-sizing: border-box; }
  ul { //reset
    margin: 0;
    box-sizing: border-box;
    >li {list-style: none;}
  }
}
.sidemenu-scroll-content {
  padding-bottom: 5rem;
}

.sidemenu-content {
  position: relative;
  padding-bottom: 2.5rem !important; //todo: FIX this
//  max-height: 100%;
}
.sidemenu-search {
  padding: $sidemenu-item-padding;
  &> input[type="text"] {
    height: 3.3em;
    padding: 1em;
    margin: 0;
    border: $sidemenu-search-border;
    border-radius: $sidemenu-search-radius;
    &:-moz-placeholder,
    &::-webkit-input-placeholder {
      color: $sidemenu-search-placeholder;
    }
  }
}
.sidemenu-items {
  //applies to all
  li {
    list-style: none;
    a {
      color: $sidemenu-link-color;
      display: block;
      font-weight: normal;
    }
    &.active {
      >a {
        font-weight: $font-weight-bold;
      }
    }
  }

  //applies to 1st level only
  > li {
    font-size: 1.2rem; //todo: sidemenu-L1-font-size
    padding: 0;
    border-bottom: 0;
    transition: background 0.2s;
    > a {
      border: $sidemenu-border;
      color: #fff;
      font-size: inherit;
      font-weight: $sidemenu-title-weight; //todo: setting
      padding: 1rem 1.8rem; //todo: sidemenu-L1-padding
      margin: 0;
      display: flex;
      position: relative;
      align-items: center;
      >.grid-block {
        padding: 0 0 0 2.3em;
        &:after {
          content: '';
          display: block;
          flex: 1;
          background: rgba(255,255,255,0.1);
          height: 2px;
          margin-left: .8rem;
          align-self: flex-end;
          position: relative;
          bottom: .5em;
        }
      }
      i {
        font-size: 1.7em;
        position: absolute;
        line-height: 1;
        top: -0.1em;
        left: 0;
        color: $primary-color;
      }
    }
  }
}
.sidemenu-subitems { //applies to 2nd level only
  font-size: .9rem;
  margin: 0;
  padding: 0.5rem 1.6rem 1rem; // TODO: FIX setting!
  display: block;
  height: auto;
  min-width: $sidemenu-min-width;
  max-width: $sidemenu-max-width;
  &:after {content: ''; display: block; clear: both;}
  &> li {
    float: left;
    width: 50%;
    &> a {
      word-wrap: break-word;
      transition: background 0.5s;
      border-radius: $sidemenu-sublink-radius;
      padding: $sidemenu-sublink-padding;
      &:hover {
        background: $sidemenu-link-hover-background;
        transition: background 0.08s;
      }
      &:before {

      }
    }
    &.is-active {
      > a {
        background: transparent !important;
        font-weight: 500;
        color: #DADADA; //todo: setting
        &:before {
          background: $primary-color;
          display: inline-block;
          width: 3px;
          height: 0.9em;
          top: -.1em;
          position: relative;
          content: '';
          vertical-align: middle;
          margin-right: .6em;
        }
      }
    }
  }
}

// Sidemenu Collapsed ---------------------------------------------/

@include breakpoint(medium up) {

.sidemenu--collapsed {
  max-width: 90px;
  min-width: 75px;

  .sidemenu-toggle {
//    position: static;
//    width: auto;
//    border-bottom: 1px solid #2A2A2A; //todo: $sidemenu-border-color
    >i {
      &:before {
        margin-left: 0;
        transition: all .2s .3s;
        transform: scaleX(-1);
      }
    }
  }
  .sidemenu-logo {padding: 1rem 0;}
  .sidemenu-search {
    display: none;
  }
  .ps-container {overflow: visible !important;}
  .logo-max {
    width: 0;
    opacity: 0;
    transition: none;
  }
  .logo-min {
    width: 40px;
    transition: 0.3s 0.035s;
  }

  .sidemenu-items {
    //applies to all
    li {

      a {

      }
    }

    //applies to 1st level only
    > li {
      &:hover { background: $sidemenu-popuot-background; }
      > a {
        text-align: center;
        padding: 1.4rem 0;
        > i { display: block; }
        > .item-text {display: none;}
      }
      &.is-active {
        &> a {

        }
      }
    }
  }
  .sidemenu-subitems { //applies to 2nd level only
    display: none;
    &> li {
      &> a {
        &:before {

        }
      }
      &:hover {}
      &.is-active {
        > a {
          &:before {
          }
        }
      }
    }
  }
}
.popout-active {
  position: relative;
  background: $sidemenu-popuot-background; //todo: $
  > .sidemenu-subitems {
    background: $sidemenu-popuot-background; //todo: $
    border: $sidemenu-border;
    display: block;
    position: absolute;
    width: 280px;
    left: calc(100% - 1px);
    top: 0;
    z-index: -1;
  }
}
} //breakpoint medium up END

@include breakpoint(small only) {
  .sidemenu {overflow-y: scroll;}
  .sidemenu-toggle {display: none;}
}

